--- a/scripts/dataset_curation/curate_final_metadata_index_qc_passing.Rmd
+++ b/scripts/dataset_curation/curate_final_metadata_index_qc_passing.Rmd
@@ -27,15 +27,19 @@ Sys.info()
 sessionInfo()
 ```
  
-# Load data and restrict to isolates from index subject
+# Load data
+
 ```{r}  
 # Overall dataset
 df <- readRDS("/Users/kgontjes/Desktop/gl_merlin/Analysis/Household_transmission/MERLIN-prolonged-colonization-ms/data/dataset/MERLIN_cohort_metadata_final.RDS")
-paste0("Number of overall isolates: ",nrow(df))
+paste0("Number of metadata entries: ", nrow(df))
+```
 
+# Restrict dataset to QC passing index isolates
+```{r}  
 # QC passing ESCrE genomes
 df_qc_passing <-  df %>% subset(qc_pass=="TRUE" & WGS_escre==TRUE)
-paste0("Number of overall ESCrE qc-passing isolates: ",nrow(df_qc_passing))
+paste0("Number of ESCrE qc-passing isolates: ",nrow(df_qc_passing))
 
 # Index isolates
 df_index <- subset(df_qc_passing, index==TRUE)
